--- a/app/views/nlbc/enterprise.html.erb
+++ b/app/views/nlbc/enterprise.html.erb
@@ -1,3 +1,15 @@
+<div id="enterprise-cover" class="jumbotron">
+  <div class="overlay"></div>
+  <div class="row justify-content-md-center d-flex h-100">
+    <div class="col-md-8 content align-self-center">
+      <div align="center" class="enterprise-text">Put your Talent first</div>
+      <div align="center" class="enterprise-second">The most fun and efficient bootcamps for companies </div>
+      <div class="row justify-content-md-center">
+        <a align="center" href="#get-in-touch" class="btn btn-primary">Request a Bootcamp </a>
+      </div>
+    </div>
+  </div>
+</div>
 <div id="logos" class="logos">
   <div class="container">
     <div class="row">
@@ -29,42 +41,46 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Competitors</th>
+            <th></th>
             <th>Nlbootcamps</th>
+            <th>Competitors</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>6000-7000 per training</td>
-            <td>4000 per training</td>
+            <td>affordable pricing</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i> double the price</td>
           </tr>
           <tr>
-            <td>1 trainer</td>
             <td>2 trainers</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i> only 1 trainer</td>
           </tr>
           <tr>
-            <td>No guarantee</td>
-            <td>student satisfaction guarantee</td>
+            <td>satisfaction guarantee</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i></td>
           </tr>
           <tr>
-            <td>outdated courses</td>
-            <td>up to date and managed courses</td>
+            <td>updated courses</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i></td>
           </tr>
           <tr>
-            <td>a lot of talking and listening</td>
             <td>interactive</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i> talking/listening model</td>
           </tr>
           <tr>
-            <td>no communication</td>
-            <td>pre- and post support</td>
+            <td>flexible</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i> only daytime</td>
           </tr>
           <tr>
-            <td>only during day</td>
-            <td>day + evenings</td>
-          </tr>
-          <tr>
-            <td>no promotion</td>
-            <td>promotion + branding included</td>
+            <td>custom branding</td>
+            <td><i class="fa fa-check" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times" aria-hidden="true"></i></td>
           </tr>
         </tbody>
       </table>
