home page ui and icons to form

--- a/app/assets/stylesheets/pages/enterprise.scss
+++ b/app/assets/stylesheets/pages/enterprise.scss
@@ -87,4 +87,13 @@ $green: #6b8c51;
   select{
     width: 100%;
   }
+  .input-group-addon{
+    background: white;
+    border-right: none;
+  }
+  .input-group{
+    input{
+      border-left: none;
+    }
+  }
 }
