--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -75,16 +75,20 @@
 <% end %>
 
 <div class="container">
-  <p align="center" class="paragraph" style="margin: 40px auto 40px auto;">
-    Find your on demand private trainer. The content will be the same but every teacher can add their own specialty and support and extra challenges. We advice to follow a bootcamp first, but individual training is possible without.
+  <p class="paragraph" style="margin: 40px auto 40px auto;">
+    Meet the people who make learning fun!
   </p>
-  <p align="center" class="paragraph" style="margin: -20px auto 20px auto;">Meet the people who make learning fun!</p>
+  <p class="paragraph" style="margin: -20px auto 20px auto;">
+    Find your on demand private trainer. The content will be the same but every
+    teacher can add their own specialty and support and extra challenges.
+    We advice to follow a bootcamp first, but individual training is possible without.
+  </p>
 </div>
 
 <div id="trainers">
   <div class="container">
     <% @trainers.each do |trainer| %>
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-left">
       <div class="col-sm-8">
         <div class="card" style="margin-bottom: 20px;">
           <div class="card-body">
