--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
     <!--[if lt IE 9]> <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script> <![endif]-->
   </head>
   <body>
-    <div class="preload"></div>
+    <%= render 'shared/loader' %>
     <div class="main-content">
       <%= render 'shared/navbar' %>
       <%= render 'shared/alerts' %>
