--- a/app/views/nlbc/privacy.html.erb
+++ b/app/views/nlbc/privacy.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container margin-top-70">
   <div class="challenges">Privacy Policy</div>
   <p class="paragraph">Last updated: September 03, 2017</p>
 
