--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -1,4 +1,4 @@
-<div id="teach-cards" class="jumbotron">
+<div id="teach-cards" class="jumbotron margin-top-70">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
