--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 150px; margin-bottom: 350px;">
+<div class="container margin-top-70" style="margin-top: 150px; margin-bottom: 350px;">
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <div class="card">
