--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div id="sign-up">
+<div id="sign-up" class="margin-top-70">
   <div class="container">
     <%= bootstrap_devise_error_messages! %>
     <div class="row justify-content-md-center">
