--- a/app/views/nlbc/trainers.html.erb
+++ b/app/views/nlbc/trainers.html.erb
@@ -1,4 +1,4 @@
-<div id="trainer-filters">
+<div id="trainer-filters" class="margin-top-70">
   <%= form_for nlbc_trainers_path, method: :get do %>
   <div class="row justify-content-md-left">
     <div class="">
