--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -1,5 +1,5 @@
 <% if flash.present? %>
-  <div class="container">
+  <div class="container margin-top-70">
     <% if flash[:danger].present? %>
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
