trainers -> find a trainer

--- a/app/views/passions/show.html.erb
+++ b/app/views/passions/show.html.erb
@@ -6,7 +6,7 @@
       <div align="center" class="main-text"><%= @passion.title.capitalize %></div>
       <div align="center">
         <%= link_to "Follow Bootcamp", new_user_registration_path, class: 'btn btn-primary' %>
-        <%= link_to "1:1 training", nlbc_trainers_path, class: 'btn btn-primary' %>
+        <%= link_to "1:1 training", nlbc_find_a_trainer_path, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
