--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
             </li>
           <% end %>
           <li class="nav-item">
-            <a class="nav-link underline" href="<%= nlbc_trainers_path %>">Trainers <span class="underline"></span></a>
+            <a class="nav-link underline" href="<%= nlbc_find_a_trainer_path %>">Find a Trainer <span class="underline"></span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link underline" href="<%= nlbc_teach_path %>">Teach</a>
