--- a/app/views/nlbc/find_a_trainer.html.erb
+++ b/app/views/nlbc/find_a_trainer.html.erb
@@ -1,5 +1,5 @@
 <div id="trainer-filters" class="margin-top-70">
-  <%= form_for nlbc_trainers_path, method: :get do %>
+  <%= form_for nlbc_find_a_trainer_path, method: :get do %>
   <div class="row justify-content-md-left">
     <div class="">
       <div class="dropdown trainer-filtering">
@@ -67,9 +67,9 @@
 
 <% if params[:challenges].present? %>
   <div class="selected-filters">
-    <a href="<%= nlbc_trainers_path %>"><span class="badge badge-pill badge-theme">Clear</span></a>
+    <a href="<%= nlbc_find_a_trainer_path %>"><span class="badge badge-pill badge-theme">Clear</span></a>
     <% @challenges_names.each do |challenge| %>
-      <span class="badge badge-pill badge-light"><%= challenge.last %> <a href="<%= nlbc_trainers_path(:challenges => params[:challenges].map{|id| id unless id == "#{challenge.first}"}.compact) %>"><i class="fa fa-times" aria-hidden="true"></i></a></span>
+      <span class="badge badge-pill badge-light"><%= challenge.last %> <a href="<%= nlbc_find_a_trainer_path(:challenges => params[:challenges].map{|id| id unless id == "#{challenge.first}"}.compact) %>"><i class="fa fa-times" aria-hidden="true"></i></a></span>
     <% end %>
   </div>
 <% end %>
