--- a/app/assets/stylesheets/shared/navbar.scss
+++ b/app/assets/stylesheets/shared/navbar.scss
@@ -15,7 +15,7 @@ $main-color: #7302A1;
     display: block;
     font-size: 16px;
     line-height: 27px;
-    font-weight: 200;
+    font-weight: 400;
     letter-spacing: 0.01rem;
     text-decoration: none;
     text-transform: capitalize;
@@ -28,7 +28,7 @@ $main-color: #7302A1;
     display: block;
     font-size: 16px;
     line-height: 27px;
-    font-weight: 200;
+    font-weight: 400;
     letter-spacing: 0.01rem;
     text-decoration: none;
     text-transform: capitalize;
@@ -77,6 +77,9 @@ $main-color: #7302A1;
       background: rgba($main-color, 0.5);
     }
   }
+}
+.white-link{
+  color: white !important;
 }
 @media screen and (min-width: 768px){
   .dropdown:hover .dropdown-menu {
