--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -61,7 +61,7 @@
             </li>
           <% else %>
             <li class="nav-item">
-              <a class="nav-link" href="Javascript:void(0)" data-toggle="modal" data-target="#signInModal">Login</a>
+              <a class="nav-link <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" data-toggle="modal" data-target="#signInModal">Login</a>
             </li>
           <% end %>
         </ul>
