vision page and nav update

--- a/app/assets/stylesheets/shared/navbar.scss
+++ b/app/assets/stylesheets/shared/navbar.scss
@@ -81,12 +81,12 @@ $main-color: #7302A1;
 .white-link{
   color: white !important;
 }
-@media screen and (min-width: 768px){
-  .dropdown:hover .dropdown-menu {
-    display: block;
-    margin-top: 0;
-   }
-}
+// @media screen and (min-width: 768px){
+//   .dropdown:hover .dropdown-menu {
+//     display: block;
+//     margin-top: 0;
+//    }
+// }
 .margin-top-70{
   margin-top: 70px;
 }
@@ -121,4 +121,52 @@ $main-color: #7302A1;
     z-index: 100;
     border-radius: 10px;
   }
+}
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
 }
