--- a/app/views/nlbc/_faq.html.erb
+++ b/app/views/nlbc/_faq.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="questions" class="container">
   <h1 class="faq">Frequently Asked Questions</h1>
 
   <div id="exampleAccordion" data-children=".item">
