--- a/app/views/nlbc/index.html.erb
+++ b/app/views/nlbc/index.html.erb
@@ -35,7 +35,7 @@
           <p> For some this is the best way to learn, because of the 1:1 individual attention.
             Out trainers are either experts in their field or just a
             passionate person like you teaching what they have just learned.</p>
-          <%= link_to 'Find a Trainer', nlbc_find_a_trainer_path, class:"btn btn-primary left-button" %>
+          <%= link_to '1on1', nlbc_find_a_trainer_path, class:"btn btn-primary left-button" %>
         </div>
       </div>
     </div>
