--- a/app/views/nlbc/teach.html.erb
+++ b/app/views/nlbc/teach.html.erb
@@ -1,4 +1,17 @@
-<div id="teach-cards" class="jumbotron margin-top-70">
+<div id="enterprise-cover" class="jumbotron">
+  <div class="overlay"></div>
+  <div class="row justify-content-md-center d-flex h-100">
+    <div class="col-md-8 content align-self-center">
+      <div align="center" class="enterprise-text">Give 1:1 support</div>
+      <div align="center" class="enterprise-second">Make your passion your profession </div>
+      <div class="row justify-content-md-center">
+        <a align="center" href="#" class="btn btn-primary">Apply now </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="teach-cards" class="jumbotron">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
