--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,41 +3,49 @@
     <a class="navbar-brand" href="<%= root_path %>">
       <%= image_tag 'logo.png' %>
     </a>
-    <% unless current_user %>
-      <button type="button" name="button" class="btn btn-green btn-sm btn-join" data-toggle="modal" data-target="#signUpModal" style="margin-top: -10px;">
-        Join
-      </button>
-    <% end %>
     <button class="navbar-toggler x" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse transition" id="navbarSupportedContent">
-      <ul class="mr-auto">
+      <ul class="navbar-nav mr-auto">
+        <li class="dropdown">
+          <a class="nav-link dropdown-toggle <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Follow Bootcamp
+          </a>
+    		  <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+              <% all_categories.each do |category| %>
+                <li class="dropdown-submenu">
+                  <a class="dropdown-item" tabindex="-1" href="#"><%= category.name.titleize %></a>
+                  <ul class="dropdown-menu">
+                    <% category.passions.each do |passion| %>
+                      <li ><a tabindex="-1" class='dropdown-item' href="<%= passion_path(passion) %>"><%= passion.title.titleize %></a></li>
+                    <% end %>
+                  </ul>
+                </li>
+              <% end %>
+            </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_find_a_trainer_path %>">1on1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_teach_path %>">Become a trainer</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            More
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="<%= nlbc_teach_path %>#questions">FAQ</a>
+            <%= link_to 'Enterprise', nlbc_enterprise_path, class: 'dropdown-item' %>
+            <%= link_to 'Vision', nlbc_vision_path, class: 'dropdown-item' %>
+          </div>
+        </li>
       </ul>
+
       <div class="my-2 my-lg-0">
         <ul class="navbar-nav mr-auto">
-          <% all_categories.each do |category| %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%= category.name.titleize %>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <% category.passions.each do |passion| %>
-                  <%= link_to passion.title.titleize, passion_path(passion), class: 'dropdown-item' %>
-                <% end %>
-              </div>
-            </li>
-          <% end %>
-          <li class="nav-item">
-            <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_find_a_trainer_path %>">Find a Trainer <span class="underline"></span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_teach_path %>">Teach</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link underline <%= white_link? ? 'white-link' : '' %>" href="<%= nlbc_enterprise_path %>">Enterprise</a>
-          </li>
           <% if current_user %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -63,6 +71,9 @@
             <li class="nav-item">
               <a class="nav-link <%= white_link? ? 'white-link' : '' %>" href="Javascript:void(0)" data-toggle="modal" data-target="#signInModal">Login</a>
             </li>
+            <button type="button" name="button" class="btn btn-green btn-sm btn-join" data-toggle="modal" data-target="#signUpModal" style="margin-top: -10px;">
+              Join
+            </button>
           <% end %>
         </ul>
       </div>
