--- a/app/views/passions/show.html.erb
+++ b/app/views/passions/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-center">
       <div align="center" class="secondary-text">Learn AND Teach</div>
-      <div align="center" class="main-text"><%= @passion.title.capitalize %></div>
+      <div align="center" class="main-text"><%= @passion.title %></div>
       <div align="center">
         <%= link_to "Follow Bootcamp", new_user_registration_path, class: 'btn btn-primary' %>
         <%= link_to "1:1 training", nlbc_find_a_trainer_path, class: 'btn btn-primary' %>
