--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>Thanks, you paid <strong>$<%= @show_amount %>.00</strong> for <%= @challenges.map{|challenge| challenge.title.capitalize }.join(', ') %>.</p>
+            <p>Thanks, you paid <strong>$<%= @show_amount %>.00</strong> for <%= @challenges.map{|challenge| challenge.title }.join(', ') %>.</p>
             <footer class="blockquote-footer"><cite title="Source Title">Neuro Linguistic Bootcamps</cite></footer>
           </blockquote>
         </div>
