--- a/app/views/teachers/teacher_information.html.erb
+++ b/app/views/teachers/teacher_information.html.erb
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group">
               <%= f.label :passion, "Passion" %>
-              <%= f.select :passion, Passion.all.map{|passion| passion.title.capitalize},{include_blank: true},class: 'form-control' %>
+              <%= f.select :passion, Passion.all.map{|passion| passion.title},{include_blank: true},class: 'form-control' %>
             </div>
             <%= f.submit t('.sign_up', default: 'Update'), class: 'btn btn-primary' %>
           <% end %>
