--- a/app/assets/stylesheets/shared/navbar.scss
+++ b/app/assets/stylesheets/shared/navbar.scss
@@ -19,6 +19,7 @@ $main-color: #7302A1;
     letter-spacing: 0.01rem;
     text-decoration: none;
     color: gray;
+    text-transform: capitalize;
   }
   a:hover{
     color: darken($main-color, 10%);
@@ -30,6 +31,7 @@ $main-color: #7302A1;
     font-weight: 400;
     letter-spacing: 0.01rem;
     text-decoration: none;
+    text-transform: capitalize;
 
     text-decoration: none;
     color: gray;
